@@ -2131,12 +2131,12 @@ test listbox-28.1 {listbox -activestyle} {
     listbox .l -activ non
     .l cget -activestyle
 } none
-test listbox-28.2 {listbox -activestyle} {!win} {
+test listbox-28.2-nonwin {listbox -activestyle} {nonwin} {
     destroy .l
     listbox .l
     .l cget -activestyle
 } dotbox
-test listbox-28.2 {listbox -activestyle} {win} {
+test listbox-28.2-win {listbox -activestyle} {win} {
     destroy .l
     listbox .l
     .l cget -activestyle
